--- a/register.html
+++ b/register.html
@@ -204,24 +204,92 @@
         </p>
       </div>
 
-      <!-- Helpful FAQs -->
-      <div class="wrap faq" style="margin-top:18px;">
-        <div class="card">
-          <h4 style="margin:0 0 8px 0;">Frequently asked questions</h4>
-          <div style="margin-top:8px;">
-            <strong>Q: Where are the forms stored?</strong>
-            <p class="small" style="margin:6px 0 12px 0;">A: We use Google Forms and responses go into Google Sheets for management. You will receive confirmation via email or WhatsApp.</p>
+      <!-- Improved FAQ (replace the old FAQ block) -->
+<section class="wrap faq" aria-labelledby="faqTitle" style="margin-top:18px;">
+  <div class="card" role="region" aria-labelledby="faqTitle" style="padding:18px;">
+    <h3 id="faqTitle" style="margin:0 0 12px 0;">Frequently asked questions</h3>
 
-            <strong>Q: How do I join the WhatsApp group?</strong>
-            <p class="small" style="margin:6px 0 12px 0;">A: Click the Join WhatsApp Group button on UGC or Workshops cards. Group is used only for announcements and schedules.</p>
+    <p class="small" style="margin-bottom:12px;">
+      Here are quick answers to common queries. If you still need help, contact us by email or WhatsApp.
+    </p>
 
-            <strong>Q: Can I pay later?</strong>
-            <p class="small" style="margin:6px 0 0 0;">A: For some paid workshops we allow seat reservation with partial advance — please contact us to confirm.</p>
-          </div>
+    <div class="faq-list" style="display:grid;gap:10px;">
+      <details>
+        <summary style="cursor:pointer; font-weight:700;">How do I register for a program?</summary>
+        <div style="padding:8px 4px;">
+          <p class="small" style="margin:0;">
+            Click the <strong>Register</strong> button on the program card you want. You will be guided through a short registration form and receive confirmation once your details are received.
+          </p>
         </div>
-      </div>
+      </details>
 
-    </section>
+      <details>
+        <summary style="cursor:pointer; font-weight:700;">What information do you need when I register?</summary>
+        <div style="padding:8px 4px;">
+          <p class="small" style="margin:0;">
+            Typically we ask for your name, email, WhatsApp/phone number, academic level and the program you’re applying for. Providing an institution or brief background helps us tailor the support.
+          </p>
+        </div>
+      </details>
+
+      <details>
+        <summary style="cursor:pointer; font-weight:700;">What do participants receive after registration?</summary>
+        <div style="padding:8px 4px;">
+          <p class="small" style="margin:0;">
+            Registered participants receive session details, access to materials (slides, datasets, code) where applicable, and links to join live sessions or recorded content if provided.
+          </p>
+        </div>
+      </details>
+
+      <details>
+        <summary style="cursor:pointer; font-weight:700;">Will I get recordings and learning materials?</summary>
+        <div style="padding:8px 4px;">
+          <p class="small" style="margin:0;">
+            Where recordings are available, we share them with registered participants. Materials such as slides, example data and code notebooks are provided for most workshops and courses.
+          </p>
+        </div>
+      </details>
+
+      <details>
+        <summary style="cursor:pointer; font-weight:700;">Do you provide certificates?</summary>
+        <div style="padding:8px 4px;">
+          <p class="small" style="margin:0;">
+            Certificates are issued for selected paid workshops and courses. The program page will indicate whether a certificate is included.
+          </p>
+        </div>
+      </details>
+
+      <details>
+        <summary style="cursor:pointer; font-weight:700;">How will I be notified about schedules and updates?</summary>
+        <div style="padding:8px 4px;">
+          <p class="small" style="margin:0;">
+            We send schedule updates by email and WhatsApp. You can also join our WhatsApp group or channel for announcements and reminders.
+          </p>
+        </div>
+      </details>
+
+      <details>
+        <summary style="cursor:pointer; font-weight:700;">I need help with my registration — who do I contact?</summary>
+        <div style="padding:8px 4px;">
+          <p class="small" style="margin:0;">
+            Email us at <a href="mailto:statup.data@gmail.com">statup.data@gmail.com</a> or message on WhatsApp: <a href="https://wa.me/919385362051">+91 93853 62051</a>. Please include the program name in your message.
+          </p>
+        </div>
+      </details>
+
+      <details>
+        <summary style="cursor:pointer; font-weight:700;">How do you handle my personal data?</summary>
+        <div style="padding:8px 4px;">
+          <p class="small" style="margin:0;">
+            We store registration details securely to manage courses and communications. We do not share personal data with third parties except where needed to deliver the service (e.g., sending course materials). Contact us for data deletion or privacy questions.
+          </p>
+        </div>
+      </details>
+    </div>
+  </div>
+</section>
+
+  
   </main>
 
   <footer class="site-footer">
