Simplify payment information in registration note

--- a/register.html
+++ b/register.html
@@ -200,7 +200,7 @@
       <div class="reg-note">
         <strong>Payment & confirmation</strong>
         <p class="small" style="margin-top:8px;">
-          For paid programs we accept online payment (Razorpay / PayPal). After successful payment you will be redirected to the Google Form to complete registration — please save the payment reference and upload it in the form where requested.
+          For paid programs we accept online payment. After successful payment you will be redirected to the Form to complete registration — please save the payment reference and upload it in the form where requested.
         </p>
       </div>
 
