--- a/register.html
+++ b/register.html
@@ -45,7 +45,7 @@
     <div class="wrap" style="align-items:center;">
       <a class="logo" href="index.html">
         <img src="logo.png" alt="STATUP logo" class="logo-img" style="height:44px" onerror="this.style.display='none'">
-        <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis</small></div>
+        <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis, Elevate Your Decision.</small></div>
       </a>
 
       <button class="nav-toggle" id="navToggleReg" aria-label="Toggle menu">☰</button>
@@ -66,9 +66,9 @@
       <div style="display:flex;gap:20px;align-items:center;flex-wrap:wrap;">
         <div style="flex:1;min-width:240px;">
           <h1 id="registerTitle" style="margin:0 0 8px 0;">Registration Hub</h1>
-          <p class="lead" style="margin-bottom:12px;">Choose a program and register using the Google Form. Paid programs include payment steps — see notes below.</p>
+          <p class="lead" style="margin-bottom:12px;">Choose a program and register using the link. Paid programs include payment steps — see notes below.</p>
           <div class="meta-row">
-            <div class="pill">Google Forms for registration</div>
+            <div class="pill">Forms for registration</div>
             <div class="pill">WhatsApp group for announcements</div>
           </div>
         </div>
@@ -98,7 +98,7 @@
           </div>
 
           <div class="reg-actions" style="margin-top:12px;">
-            <a class="btn primary" href="#FORM_LINK" target="_blank" rel="noopener">Register (Google Form)</a>
+            <a class="btn primary" href="#FORM_LINK" target="_blank" rel="noopener">Register</a>
             <a class="btn ghost" href="https://chat.whatsapp.com/J6pgWYeiFouJCM91KUVOg3?mode=hqrt1" target="_blank">Join WhatsApp Group</a>
             <a class="btn ghost" href="#ugc-details" style="align-self:center">Details</a>
           </div>
@@ -128,7 +128,7 @@
           </div>
 
           <div class="reg-actions" style="margin-top:12px;">
-            <a class="btn primary" href="#FORM_LINK" target="_blank">Register (Google Form)</a>
+            <a class="btn primary" href="#FORM_LINK" target="_blank">Register</a>
             <a class="btn ghost" href="#software-details">Curriculum</a>
             <a class="btn ghost" href="contact.html">Request Info</a>
           </div>
@@ -297,7 +297,7 @@
       <div>
         <a class="logo" href="index.html">
           <img src="logo.png" alt="STATUP logo" class="logo-img" onerror="this.style.display='none'">
-          <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis</small></div>
+          <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis, Elevate Your Decision.</small></div>
         </a>
       </div>
 
