Revise contact.html for better layout and styling
Updated the contact page with improved structure and styles.

--- a/contact.html
+++ b/contact.html
@@ -1,96 +1,185 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Contact — STATUP</title>
-  <meta name="description" content="Contact STATUP — get in touch for registration, workshops, test series and project support." />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Contact Us — STATUP</title>
   <link rel="stylesheet" href="styles.css">
+
+  <style>
+    /* Page-specific enhancements */
+    .contact-hero {
+      padding:48px 24px;
+      border-radius:16px;
+      background:linear-gradient(180deg, rgba(14,165,164,0.05), rgba(140,214,95,0.05));
+      margin-bottom:28px;
+    }
+    .contact-grid {
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(320px,1fr));
+      gap:22px;
+      margin-top:16px;
+    }
+    .contact-card {
+      background:var(--card);
+      padding:24px;
+      border-radius:16px;
+      box-shadow:var(--shadow);
+    }
+    .icon {
+      font-size:18px;
+      width:22px;
+      display:inline-block;
+      text-align:center;
+    }
+    .contact-card h3 {
+      margin:0 0 12px 0;
+      color:#073b4c;
+    }
+    .contact-list p, .contact-list a {
+      margin:6px 0;
+      font-size:15px;
+    }
+    .cta-row {
+      display:flex;
+      gap:12px;
+      flex-wrap:wrap;
+      margin-top:14px;
+    }
+    .map-card iframe {
+      border-radius:12px;
+      width:100%;
+      height:240px;
+      border:0;
+    }
+  </style>
+
 </head>
+
 <body>
-  <header class="site-header">
-    <div class="wrap">
+
+<!-- HEADER -->
+<header class="site-header">
+  <div class="wrap" style="align-items:center;">
+    <a class="logo" href="index.html">
+      <img src="logo.png" alt="STATUP logo" class="logo-img" onerror="this.style.display='none'">
+      <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis</small></div>
+    </a>
+
+    <button class="nav-toggle" id="navToggle" aria-label="Toggle menu">☰</button>
+
+    <nav class="main-nav" id="mainNav" aria-label="Main navigation">
+      <a href="index.html" class="nav-link">Home</a>
+      <a href="about.html" class="nav-link">About Us</a>
+      <a href="services.html" class="nav-link">Our Services</a>
+      <a href="contact.html" class="nav-link active">Contact Us</a>
+      <a href="register.html" class="nav-link cta">Register</a>
+    </nav>
+  </div>
+</header>
+
+<main class="main">
+
+  <!-- Contact Hero -->
+  <section class="wrap contact-hero">
+    <h1 style="margin-bottom:8px;">Contact Us</h1>
+    <p class="lead">Questions? Registrations? Project help? We're here to assist you.  
+    Reach out through any of the contact options below.</p>
+  </section>
+
+  <!-- Contact Grid -->
+  <section class="wrap contact-grid">
+
+    <!-- Primary Contact Card -->
+    <div class="contact-card" aria-labelledby="primaryContact">
+      <h3 id="primaryContact">Primary Contact</h3>
+
+      <div class="contact-list">
+        <p><span class="icon">📧</span> <a href="mailto:statup.data@gmail.com">statup.data@gmail.com</a></p>
+        <p><span class="icon">📞</span> <a href="https://wa.me/919385362051" target="_blank">+91 93853 62051</a></p>
+        <p><span class="icon">📍</span> Statup, Calicut, Kerala, India</p>
+      </div>
+
+      <h4 style="margin-top:18px;">WhatsApp</h4>
+      <div class="contact-list">
+        <p><span class="icon">💬</span> <a href="https://wa.me/919385362051" target="_blank">Direct Chat</a></p>
+        <p><span class="icon">👥</span> <a href="https://chat.whatsapp.com/J6pgWYeiFouJCM91KUVOg3?mode=hqrt1" target="_blank">WhatsApp Group</a></p>
+        <p><span class="icon">📢</span> <a href="https://whatsapp.com/channel/0029VbBAltU29755yuDpou1U/102" target="_blank">WhatsApp Channel</a></p>
+      </div>
+    </div>
+
+    <!-- Social & Updates Card -->
+    <div class="contact-card" aria-labelledby="socialUpdates">
+      <h3 id="socialUpdates">Social & Updates</h3>
+
+      <div class="contact-list">
+        <p><span class="icon">📸</span> <a href="https://www.instagram.com/statupdata" target="_blank">Instagram</a></p>
+        <p style="margin-top:8px;" class="small">
+          Join our channel & group for schedules, updates, tests, workshops, and announcements.
+        </p>
+      </div>
+
+      <h4 style="margin-top:18px;">Office Hours</h4>
+      <p>Mon — Sat: 9:00 AM – 7:00 PM (IST)</p>
+
+      <div class="cta-row">
+        <a class="btn primary" href="https://chat.whatsapp.com/J6pgWYeiFouJCM91KUVOg3?mode=hqrt1" target="_blank">
+          Join WhatsApp Group
+        </a>
+        <a class="btn ghost" href="mailto:statup.data@gmail.com">Email Us</a>
+      </div>
+    </div>
+
+    <!-- Optional Map Card -->
+    <div class="contact-card map-card">
+      <h3>Find Us</h3>
+      <p class="small">Calicut, Kerala</p>
+
+      <!-- You can replace this with your exact Google Map location -->
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3930.1448894275444!2d75.7804!3d11.2588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba65b9fc1cba907%3A0x8b7a8a1f6ce3f96c!2sCalicut%2C%20Kerala!5e0!3m2!1sen!2sin!4v1696426950000"
+        loading="lazy" allowfullscreen>
+      </iframe>
+    </div>
+
+  </section>
+
+</main>
+
+<!-- FOOTER -->
+<footer class="site-footer">
+  <div class="wrap footer-grid">
+    <div>
       <a class="logo" href="index.html">
         <img src="logo.png" alt="STATUP logo" class="logo-img" onerror="this.style.display='none'">
         <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis</small></div>
       </a>
-
-      <button class="nav-toggle" id="navToggle4" aria-label="Toggle menu">☰</button>
-
-      <nav class="main-nav" id="mainNav4" aria-label="Main navigation">
-        <a href="index.html" class="nav-link">Home</a>
-        <a href="about.html" class="nav-link">About Us</a>
-        <a href="services.html" class="nav-link">Our Services</a>
-        <a href="contact.html" class="nav-link active">Contact Us</a>
-        <a href="register.html" class="nav-link cta">Register</a>
-      </nav>
-    </div>
-  </header>
-
-  <main class="main">
-    <section class="wrap content contact-card">
-      <h1>Contact Us</h1>
-      <p class="lead">Questions? Registrations? Project help? Reach out using any of the channels below.</p>
-
-      <div class="grid two-cols contact-grid">
-        <div class="card">
-          <h3>Primary Contact</h3>
-          <p>📧 <a href="mailto:statup.data@gmail.com">statup.data@gmail.com</a></p>
-          <p>📞 <a href="https://wa.me/919385362051">+91 93853 62051</a></p>
-          <p>📍 Statup, Calicut, Kerala, India</p>
-
-          <h4 class="mt">WhatsApp</h4>
-          <p><a href="https://wa.me/919385362051" target="_blank">Direct Chat</a></p>
-          <p><a href="https://chat.whatsapp.com/J6pgWYeiFouJCM91KUVOg3?mode=hqrt1" target="_blank">WhatsApp Group</a></p>
-          <p><a href="https://whatsapp.com/channel/0029VbBAltU29755yuDpou1U/102" target="_blank">WhatsApp Channel</a></p>
-        </div>
-
-        <div class="card">
-          <h3>Social & Updates</h3>
-          <p>📸 <a href="https://www.instagram.com/statupdata" target="_blank">Instagram</a></p>
-          <p>🔔 Join the channel & group to stay updated with tests & workshops.</p>
-
-          <h3 class="mt">Office Hours</h3>
-          <p>Mon — Sat: 9:00 AM — 7:00 PM (IST)</p>
-
-          <div class="mt">
-            <a class="btn primary" href="https://chat.whatsapp.com/J6pgWYeiFouJCM91KUVOg3?mode=hqrt1" target="_blank">Join WhatsApp Group</a>
-            <a class="btn ghost" href="mailto:statup.data@gmail.com">Email Us</a>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="wrap footer-grid">
-      <div>
-        <a class="logo" href="index.html">
-          <img src="logo.png" alt="STATUP logo" class="logo-img" onerror="this.style.display='none'">
-          <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis</small></div>
-        </a>
-      </div>
-
-      <div>
-        <h4>Contact</h4>
-        <p>Statup, Calicut, Kerala, India</p>
-        <p>📧 <a href="mailto:statup.data@gmail.com">statup.data@gmail.com</a></p>
-        <p>📞 <a href="https://wa.me/919385362051">+91 93853 62051</a></p>
-      </div>
-
-      <div>
-        <h4>Social</h4>
-        <a href="https://chat.whatsapp.com/J6pgWYeiFouJCM91KUVOg3?mode=hqrt1" target="_blank" rel="noopener">WhatsApp Group</a><br>
-        <a href="https://whatsapp.com/channel/0029VbBAltU29755yuDpou1U/102" target="_blank" rel="noopener">WhatsApp Channel</a><br>
-        <a href="https://www.instagram.com/statupdata" target="_blank" rel="noopener">Instagram</a>
-      </div>
     </div>
 
-    <div class="wrap copyright">
-      <small>© <span id="year4"></span> STATUP — Streamline Your Analysis, Elevate Your Decision.</small>
+    <div>
+      <h4>Contact</h4>
+      <p>Calicut, Kerala, India</p>
+      <p><a href="mailto:statup.data@gmail.com">statup.data@gmail.com</a></p>
+      <p><a href="https://wa.me/919385362051">+91 93853 62051</a></p>
     </div>
-  </footer>
 
-  <script src="script.js"></script>
+    <div>
+      <h4>Quick Links</h4>
+      <a href="services.html">Services</a><br>
+      <a href="register.html">Register</a><br>
+      <a href="about.html">About Us</a>
+    </div>
+  </div>
+
+  <div class="wrap copyright">
+    <small>© <span id="yearContact"></span> STATUP — Streamline Your Analysis, Elevate Your Decision.</small>
+  </div>
+</footer>
+
+<script src="script.js"></script>
+<script>
+  document.getElementById("yearContact").textContent = new Date().getFullYear();
+</script>
+
 </body>
 </html>
