Update logo text to enhance messaging

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
   <div class="wrap" style="align-items:center;">
     <a class="logo" href="index.html">
       <img src="logo.png" alt="STATUP logo" class="logo-img" onerror="this.style.display='none'">
-      <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis</small></div>
+      <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis, Elevate Your Decision.</small></div>
     </a>
 
     <button class="nav-toggle" id="navToggle" aria-label="Toggle menu">☰</button>
@@ -152,7 +152,7 @@
     <div>
       <a class="logo" href="index.html">
         <img src="logo.png" alt="STATUP logo" class="logo-img" onerror="this.style.display='none'">
-        <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis</small></div>
+        <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis, Elevate Your Decision.</small></div>
       </a>
     </div>
 
