--- a/services.html
+++ b/services.html
@@ -92,7 +92,7 @@
           <p class="small-meta">Mock tests, past year questions, explanations tailored for UGC NET Paper 2 (Population Studies).</p>
           <div style="margin-top:10px;">
             <a class="btn primary" href="register.html#ugc">Register</a>
-            <a class="btn ghost" href="#ugc-full">Details</a>
+            <a class="btn ghost" href="materials.html#ugc-full">Details</a>
           </div>
         </article>
 
@@ -101,7 +101,7 @@
           <p class="small-meta">Hands-on short courses — research methods, SPSS, Python for analysis, and visualization.</p>
           <div style="margin-top:10px;">
             <a class="btn primary" href="register.html#workshops">Register</a>
-            <a class="btn ghost" href="#workshops-full">Details</a>
+            <a class="btn ghost" href="materials.html#workshops-full">Details</a>
           </div>
         </article>
 
