--- a/ugcmaterials.html
+++ b/ugcmaterials.html
@@ -74,7 +74,7 @@
       </div>
       <nav style="display:flex;gap:14px;">
         <a href="index.html">Home</a>
-        <a href="materials.html">All Materials</a>
+        <a href="ugcmaterials.html">All Materials</a>
         <a href="services.html">Services</a>
       </nav>
     </div>
