--- a/services.html
+++ b/services.html
@@ -101,7 +101,7 @@
           <p class="small-meta">Hands-on short courses — research methods, SPSS, Python for analysis, and visualization.</p>
           <div style="margin-top:10px;">
             <a class="btn primary" href="register.html#workshops">Register</a>
-            <a class="btn ghost" href="materials.html#workshops-full">Details</a>
+            <a class="btn ghost" href="workshops.html#workshops-full">Details</a>
           </div>
         </article>
 
@@ -110,7 +110,7 @@
           <p class="small-meta">SPSS, R, Python, Excel, Jamovi & JASP: practical projects, example datasets and code files.</p>
           <div style="margin-top:10px;">
             <a class="btn primary" href="register.html#software">Enroll</a>
-            <a class="btn ghost" href="#software-full">Curriculum</a>
+            <a class="btn ghost" href="#software.html">Curriculum</a>
           </div>
         </article>
 
