--- a/services.html
+++ b/services.html
@@ -110,7 +110,7 @@
           <p class="small-meta">SPSS, R, Python, Excel, Jamovi & JASP: practical projects, example datasets and code files.</p>
           <div style="margin-top:10px;">
             <a class="btn primary" href="register.html#software">Enroll</a>
-            <a class="btn ghost" href="#software.html">Curriculum</a>
+            <a class="btn ghost" href="software.html#software">Curriculum</a>
           </div>
         </article>
 
