--- a/services.html
+++ b/services.html
@@ -119,7 +119,7 @@
           <p class="small-meta">End-to-end mentoring: topic selection, sampling, analysis, interpretation and report writing.</p>
           <div style="margin-top:10px;">
             <a class="btn primary" href="register.html#project">Request Support</a>
-            <a class="btn ghost" href="#misc-full">Details</a>
+            <a class="btn ghost" href="contact.html#misc-full">Details</a>
           </div>
         </article>
       </div>
