--- a/services.html
+++ b/services.html
@@ -60,7 +60,7 @@
           <h1 id="servicesTitle" style="margin:0 0 8px 0;">Services at STATUP</h1>
           <p class="lead" style="margin-bottom:12px;">Practical training, exam preparation and research-grade analytical support. Choose a program below to view details and register.</p>
           <div style="display:flex;gap:8px;flex-wrap:wrap">
-            <a class="btn primary" href="register.html#ugc">Register for UGC Test Series</a>
+            <a class="btn primary" href="https://docs.google.com/forms/d/e/1FAIpQLSfoh5biezH9AP6m1z5JKkBI4FB2NdLrzc74M2MXPwvjjwqI-A/viewform?usp=sharing&ouid=110774557050464307085#ugc">Register for UGC Test Series</a>
             <a class="btn ghost" href="register.html#workshops">Register for Workshops</a>
           </div>
         </div>
