--- a/services.html
+++ b/services.html
@@ -141,7 +141,7 @@
               <strong>Mock Test 01 — Population Studies</strong>
               <div class="small-meta">100 MCQs • 120 minutes • Objective</div>
               <div style="margin-top:6px;">
-                <a class="link" href="#FORM_LINK" target="_blank">Register / Take Test (Google Form)</a> ·
+                <a class="link" href="https://docs.google.com/forms/d/e/1FAIpQLSfoh5biezH9AP6m1z5JKkBI4FB2NdLrzc74M2MXPwvjjwqI-A/viewform?usp=sharing&ouid=110774557050464307085#FORM_LINK" target="_blank">Register / Take Test (Google Form)</a> ·
                 <a class="link" href="#">Solutions</a>
                 <span style="margin-left:8px" class="badge">Active</span>
               </div>
@@ -151,7 +151,7 @@
               <strong>Mock Test 02 — Population Studies</strong>
               <div class="small-meta">Status: Upcoming</div>
               <div style="margin-top:6px;">
-                <a class="link" href="#FORM_LINK" target="_blank">Register</a>
+                <a class="link" href="https://docs.google.com/forms/d/e/1FAIpQLSfoh5biezH9AP6m1z5JKkBI4FB2NdLrzc74M2MXPwvjjwqI-A/viewform?usp=sharing&ouid=110774557050464307085#FORM_LINK" target="_blank">Register</a>
               </div>
             </li>
 
@@ -159,7 +159,7 @@
               <strong>Full Test Series (All)</strong>
               <div class="small-meta">Complete series registration & performance report</div>
               <div style="margin-top:6px;">
-                <a class="btn primary" href="#FORM_LINK" target="_blank">Register for Series</a>
+                <a class="btn primary" href="#https://docs.google.com/forms/d/e/1FAIpQLSfoh5biezH9AP6m1z5JKkBI4FB2NdLrzc74M2MXPwvjjwqI-A/viewform?usp=sharing&ouid=110774557050464307085" target="_blank">Register for Series</a>
               </div>
             </li>
           </ol>
@@ -177,18 +177,27 @@
           <div class="card">
             <h4>Study Materials</h4>
             <ul class="materials-list">
-              <li><a href="#">UGC PYQ compilation</a></li>
-              <li><a href="#">Model answers & explanation </a></li>
-              <li><a href="#">Practice question packs</a></li>
+              <li><a href="ugcmaterials.html#">UGC PYQ compilation</a></li>
+              <li><a href="ugcmaterials.html#">Model answers & explanation </a></li>
+              <li><a href="ugcmaterials.html#">Practice question packs</a></li>
             </ul>
 
             <h4 style="margin-top:12px;">UGC Videos</h4>
             <div class="video-embed" style="margin-top:8px;">
-              <div class="small-meta">YouTube playlist / video embeds go here</div>
+              <iframe 
+                   width="100%" 
+                   height="320" 
+                   src="https://www.youtube.com/embed/liPhwaVVgibp7OJX" 
+                   title="YouTube video player" 
+                   frameborder="0" 
+                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                   allowfullscreen>
+              </iframe>
+
             </div>
 
             <div style="margin-top:12px;">
-              <a class="btn ghost" href="#materials">View All Materials</a>
+              <a class="btn ghost" href="ugcmaterials.html#materials">View All Materials</a>
             </div>
           </div>
         </aside>
