--- a/services.html
+++ b/services.html
@@ -181,19 +181,14 @@
               <li><a href="ugcmaterials.html#">Model answers & explanation </a></li>
               <li><a href="ugcmaterials.html#">Practice question packs</a></li>
             </ul>
-
             <h4 style="margin-top:12px;">UGC Videos</h4>
             <div class="video-embed" style="margin-top:8px;">
               <iframe 
-                   width="100%" 
-                   height="320" 
-                   src="https://www.youtube.com/embed/liPhwaVVgibp7OJX" 
-                   title="YouTube video player" 
-                   frameborder="0" 
-                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                   allowfullscreen>
+                    width="100%" 
+                    height="320" 
+                    src="https://www.youtube.com/embed/x6NtvsJDc_4"
+                    allowfullscreen>
               </iframe>
-
             </div>
 
             <div style="margin-top:12px;">
