--- a/services.html
+++ b/services.html
@@ -211,7 +211,7 @@
       <div class="accordion" style="margin-top:12px;">
         <!-- Workshop 1 -->
         <article class="accordion-item">
-          <button class="acc-head">Research Methods & Thesis Design <span class="small-meta">• 2 days • Free</span></button>
+          <button class="acc-head">Research Methods & Thesis Design <span class="small-meta">• 2 days • Paid</span></button>
           <div class="acc-body">
             <h4>Overview</h4>
             <p class="small-meta">Design robust research questions, sampling methods and a clear analysis plan.</p>
@@ -222,9 +222,9 @@
               <li>Analysis plan & interpretation</li>
             </ul>
             <h4>Materials</h4>
-            <p class="small-meta">PPT, sample datasets, checklists</p>
+            <p class="small-meta">PPT, sample datasets</p>
             <div style="margin-top:10px;">
-              <a class="btn primary" href="#FORM_LINK" target="_blank">Register (Google Form)</a>
+              <a class="btn primary" href="https://forms.gle/U7HgSJ8YxamZbwnY8#FORM_LINK" target="_blank">Register</a>
               <a class="btn ghost" href="https://chat.whatsapp.com/J6pgWYeiFouJCM91KUVOg3?mode=hqrt1" target="_blank">Join Group</a>
             </div>
           </div>
@@ -237,9 +237,9 @@
             <h4>Overview</h4>
             <p class="small-meta">Data import, cleaning, hypothesis testing, regression and reporting in SPSS.</p>
             <h4>Materials</h4>
-            <p class="small-meta">Practice datasets, SPSS syntax, PPTs</p>
+            <p class="small-meta">Practice datasets, SPSS syntax</p>
             <div style="margin-top:10px;">
-              <a class="btn primary" href="#FORM_LINK" target="_blank">Register (Paid)</a>
+              <a class="btn primary" href="https://forms.gle/rFCyuvGNkUfuwC8n7#FORM_LINK" target="_blank">Register</a>
             </div>
           </div>
         </article>
@@ -253,7 +253,7 @@
             <h4>Materials</h4>
             <p class="small-meta">Notebooks, datasets and code snippets</p>
             <div style="margin-top:10px;">
-              <a class="btn primary" href="#FORM_LINK" target="_blank">Register</a>
+              <a class="btn primary" href="https://forms.gle/z8E6v1QVubnmoRMd7#FORM_LINK" target="_blank">Register</a>
             </div>
           </div>
         </article>
@@ -271,15 +271,15 @@
         <div class="card">
           <h4>SPSS Course (Beginner → Advanced)</h4>
           <p class="small-meta">Data import, cleaning, descriptive & inferential tests, regression and report export.</p>
-          <p class="small-meta" style="margin-top:8px;">Materials: PPTs, datasets, syntax files.</p>
-          <div style="margin-top:8px;"><a class="btn primary" href="#FORM_LINK">Register</a></div>
+          <p class="small-meta" style="margin-top:8px;">Materials:  datasets, syntax files.</p>
+          <div style="margin-top:8px;"><a class="btn primary" href="software.html#FORM_LINK">Register</a></div>
         </div>
 
         <div class="card">
           <h4>Python for Statistics</h4>
           <p class="small-meta">Pandas, visualization, hypothesis testing, regression & reproducible notebooks.</p>
           <p class="small-meta" style="margin-top:8px;">Materials: Jupyter notebooks, sample data & solutions.</p>
-          <div style="margin-top:8px;"><a class="btn primary" href="#FORM_LINK">Register</a></div>
+          <div style="margin-top:8px;"><a class="btn primary" href="software.html#FORM_LINK">Register</a></div>
         </div>
       </div>
     </section>
@@ -293,10 +293,10 @@
 
       <div style="margin-top:12px;">
         <ul class="small-meta">
-          <li><strong>Project/Dissertation Support:</strong> Topic selection, research design, data analysis and report writing. <a href="#FORM_LINK">Register</a></li>
-          <li><strong>Individual / Group Tuition:</strong> Classes for 8th → PG level. <a href="#FORM_LINK">Register</a></li>
-          <li><strong>Statistics Tutorials:</strong> Concept clarity + problem solving. <a href="#FORM_LINK">Register</a></li>
-          <li><strong>Data Analysis (A→Z):</strong> For papers, reports and professional projects. <a href="#FORM_LINK">Request support</a></li>
+          <li><strong>Project/Dissertation Support:</strong> Topic selection, research design, data analysis and report writing. <a href="https://forms.gle/cuiUGguuqt4VvE9n9#FORM_LINK">Register</a></li>
+          <li><strong>Individual / Group Tuition:</strong> Classes for 8th → PG level. <a href="https://forms.gle/sttmgsYopNznGFBx9#FORM_LINK">Register</a></li>
+          <li><strong>Statistics Tutorials:</strong> Concept clarity + problem solving. <a href="https://forms.gle/J2c2oiaspAEuuBku6#FORM_LINK">Register</a></li>
+          <li><strong>Data Analysis (A→Z):</strong> For papers, reports and professional projects. <a href="https://forms.gle/cuiUGguuqt4VvE9n9#FORM_LINK">Request support</a></li>
         </ul>
 
         <div style="margin-top:14px;">
