--- a/register.html
+++ b/register.html
@@ -68,7 +68,6 @@
           <h1 id="registerTitle" style="margin:0 0 8px 0;">Registration Hub</h1>
           <p class="lead" style="margin-bottom:12px;">Choose a program and register using the link. Paid programs include payment steps — see notes below.</p>
           <div class="meta-row">
-            <div class="pill">Forms for registration</div>
             <div class="pill">WhatsApp group for announcements</div>
           </div>
         </div>
@@ -94,13 +93,13 @@
           <div>
             <h3 id="ugcCard">UGC NET Test Series</h3>
             <p>Structured mock tests, detailed answer explanations, and performance feedback for Population Studies (Paper 2).</p>
-            <div class="small" style="margin-top:6px;">Format: Online • Mode: Timed • Materials supplied after each test</div>
+            <div class="small" style="margin-top:6px;">Format: Online • Mode: Timed • Immediate Result after each test</div>
           </div>
 
           <div class="reg-actions" style="margin-top:12px;">
-            <a class="btn primary" href="#FORM_LINK" target="_blank" rel="noopener">Register</a>
+            <a class="btn primary" href="https://forms.gle/mmuW5bv4GSzKFTYB6#FORM_LINK" target="_blank" rel="noopener">Register</a>
             <a class="btn ghost" href="https://chat.whatsapp.com/J6pgWYeiFouJCM91KUVOg3?mode=hqrt1" target="_blank">Join WhatsApp Group</a>
-            <a class="btn ghost" href="#ugc-details" style="align-self:center">Details</a>
+            <a class="btn ghost" href="ugcmaterials.html#ugc-details" style="align-self:center">Details</a>
           </div>
         </article>
 
@@ -113,9 +112,9 @@
           </div>
 
           <div class="reg-actions" style="margin-top:12px;">
-            <a class="btn primary" href="#FORM_LINK" target="_blank">Register for Workshop</a>
+            <a class="btn primary" href="https://forms.gle/EgQNH13FZWJEnBMf9#FORM_LINK" target="_blank">Register for Workshop</a>
             <a class="btn ghost" href="contact.html">Ask a Question</a>
-            <a class="btn ghost" href="#workshops-details">Schedule</a>
+            <a class="btn ghost" href="workshops.html#workshops-details">Schedule</a>
           </div>
         </article>
 
@@ -128,8 +127,8 @@
           </div>
 
           <div class="reg-actions" style="margin-top:12px;">
-            <a class="btn primary" href="#FORM_LINK" target="_blank">Register</a>
-            <a class="btn ghost" href="#software-details">Curriculum</a>
+            <a class="btn primary" href="https://forms.gle/9QVBZMjkR7R5BF7bA#FORM_LINK" target="_blank">Register</a>
+            <a class="btn ghost" href="software.html#software-details">Curriculum</a>
             <a class="btn ghost" href="contact.html">Request Info</a>
           </div>
         </article>
@@ -143,7 +142,7 @@
           </div>
 
           <div class="reg-actions" style="margin-top:12px;">
-            <a class="btn primary" href="#FORM_LINK" target="_blank">Request Support</a>
+            <a class="btn primary" href="https://forms.gle/nQUaVjkwQokqKQe49#FORM_LINK" target="_blank">Request Support</a>
             <a class="btn ghost" href="contact.html">Consultation</a>
           </div>
         </article>
@@ -158,7 +157,7 @@
             <p class="small">Classes for school, UG and PG students — flexible schedules.</p>
           </div>
           <div class="reg-actions">
-            <a class="btn primary" href="#FORM_LINK" target="_blank">Register</a>
+            <a class="btn primary" href="https://forms.gle/YfMTsv8hZkKRqgpk7#FORM_LINK" target="_blank">Register</a>
             <a class="btn ghost" href="contact.html">Discuss Schedule</a>
           </div>
         </article>
@@ -169,7 +168,7 @@
             <p class="small">Focused concept sessions to clear fundamentals and problem solving.</p>
           </div>
           <div class="reg-actions">
-            <a class="btn primary" href="#FORM_LINK" target="_blank">Register</a>
+            <a class="btn primary" href="https://forms.gle/SvrASc5FULFXUTSy7#FORM_LINK" target="_blank">Register</a>
             <a class="btn ghost" href="contact.html">Ask a Question</a>
           </div>
         </article>
@@ -180,7 +179,7 @@
             <p class="small">One-to-one mentoring and improvement plans.</p>
           </div>
           <div class="reg-actions">
-            <a class="btn primary" href="#FORM_LINK" target="_blank">Register</a>
+            <a class="btn primary" href="https://forms.gle/kZQAK4n8A7KtJ4Hv5#FORM_LINK" target="_blank">Register</a>
             <a class="btn ghost" href="contact.html">Request Info</a>
           </div>
         </article>
