--- a/ugcmaterials.html
+++ b/ugcmaterials.html
@@ -74,7 +74,7 @@
       </div>
       <nav style="display:flex;gap:14px;">
         <a href="index.html">Home</a>
-        <a href="ugcmaterials.html">All Materials</a>
+        <a href="materials.html">All Materials</a>
         <a href="services.html">Services</a>
       </nav>
     </div>
@@ -179,7 +179,18 @@
       openBtn.target = '_blank';
       openBtn.rel = 'noopener';
 
-      
+      const copyBtn = document.createElement('button');
+      copyBtn.className = 'btn ghost';
+      copyBtn.textContent = 'Copy link';
+      copyBtn.addEventListener('click', () => {
+        navigator.clipboard.writeText(item.link).then(() => {
+          copyBtn.textContent = 'Copied ✓';
+          setTimeout(()=> copyBtn.textContent = 'Copy link', 2000);
+        }).catch(()=> {
+          alert('Copy failed. Use your browser to copy the link.');
+        });
+      });
+
       const detailsBtn = document.createElement('button');
       detailsBtn.className = 'btn ghost';
       detailsBtn.textContent = 'Details';
