--- a/ugcmaterials.html
+++ b/ugcmaterials.html
@@ -128,7 +128,7 @@
      *************************************************************************/
     const items = [
       // --- PYQs (past-year questions)
-      { id: 'pyq-2023', title: 'UGC NET Paper 2 — PYQ 2023', year: 2023, tags:['pyq','2019-2023'], type: 'pyq', link: 'files/pyq-2023.pdf', desc: 'Complete paper for 2023 (Population Studies).' },
+      { id: 'pyq-2025', title: 'UGC NET Paper 2 — PYQ 2025 June', year: 2025, tags:['pyq','2025'], type: 'pyq', link: 'https://forms.gle/1z3Z1aUfvfBZ9LxN9', desc: 'Complete paper for 2025 June (Population Studies).' },
       { id: 'pyq-2022', title: 'UGC NET Paper 2 — PYQ 2022', year: 2022, tags:['pyq'], type: 'pyq', link: 'files/pyq-2022.pdf' },
       { id: 'pyq-2019', title: 'UGC NET Paper 2 — PYQ 2019', year: 2019, tags:['pyq'], type: 'pyq', link: 'files/pyq-2019.pdf' },
 
